--- a/src/main/java/View/Cadastro.form
+++ b/src/main/java/View/Cadastro.form
@@ -35,17 +35,17 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" min="-2" pref="77" max="-2" attributes="0"/>
                                   <Component id="lblSenhaCadastro" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtNumeroJogador" min="-2" pref="131" max="-2" attributes="0"/>
-                          <Component id="txtCpfCadastro" min="-2" pref="131" max="-2" attributes="0"/>
-                          <Component id="txtPosicaoJogador" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
-                          <Component id="txtSenhaCadastro" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txtNumeroJogador" pref="131" max="32767" attributes="0"/>
+                          <Component id="txtCpfCadastro" pref="131" max="32767" attributes="0"/>
+                          <Component id="txtSenhaCadastro" alignment="0" pref="131" max="32767" attributes="0"/>
+                          <Component id="cbPosicoes" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -104,8 +104,8 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtPosicaoJogador" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbPosicoes" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -114,7 +114,7 @@
               </Group>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Component id="btnCadastrar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="55" max="32767" attributes="0"/>
+              <EmptySpace pref="44" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -185,7 +185,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Numero: "/>
+        <Property name="text" type="java.lang.String" value="Numero camisa: "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
@@ -198,7 +198,23 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtNumeroJogador">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtPosicaoJogador">
+    <Component class="javax.swing.JComboBox" name="cbPosicoes">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="7">
+            <StringItem index="0" value="Goleiro"/>
+            <StringItem index="1" value="Lateral Esquerdo"/>
+            <StringItem index="2" value="Lateral Direito "/>
+            <StringItem index="3" value="Zagueiro"/>
+            <StringItem index="4" value="Volante"/>
+            <StringItem index="5" value="Meio campo"/>
+            <StringItem index="6" value="Atacante"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
