--- a/src/main/java/View/EditarJogador.form
+++ b/src/main/java/View/EditarJogador.form
@@ -220,8 +220,8 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
-            <StringItem index="0" value="Ativar"/>
-            <StringItem index="1" value="Desativar"/>
+            <StringItem index="0" value="Ativo"/>
+            <StringItem index="1" value="Inativo"/>
           </StringArray>
         </Property>
       </Properties>
