--- a/src/main/java/View/CriarPartida.form
+++ b/src/main/java/View/CriarPartida.form
@@ -104,10 +104,8 @@
               <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="cbTime1" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cbTime2" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnCadastrarTime" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="cbTime2" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCadastrarTime" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Component id="lblJogadoresTime1" min="-2" max="-2" attributes="0"/>
@@ -158,19 +156,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbTime1">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="7">
-            <StringItem index="0" value="Flamengo"/>
-            <StringItem index="1" value="Botafogo"/>
-            <StringItem index="2" value="Corinthians"/>
-            <StringItem index="3" value="Vasco"/>
-            <StringItem index="4" value="Palmeiras"/>
-            <StringItem index="5" value="Fluminense"/>
-            <StringItem index="6" value="Internacional"/>
-          </StringArray>
-        </Property>
-      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbTime1ActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
